Fix horizontal and vertical padding for Cast icon in Ash system tray

The horizontal and vertical padding values for the Cast
icon in the Ash system tray are incorrectly reversed.
Use horizontal padding for a horizontal shelf and
use vertical padding for a vertical shelf.

BUG=635955
TEST=manual

Review-Url: https://codereview.chromium.org/2223263003
Cr-Commit-Position: refs/heads/master@{#410718}

Former-commit-id: 01746c493874c68d66969911d2a1bda71cb57002